fix display on small screens

--- a/css/main.css
+++ b/css/main.css
@@ -216,6 +216,10 @@
 }
 
 @media only screen and (max-width: 1007px) {
+    #specials {
+        flex-direction: column;
+    }
+    
     .stats-card{
         height: 3rem;
         margin-bottom: 0.5rem;
@@ -236,7 +240,8 @@
         font-size: 1rem;
     }
     
-    .deck {
+    #decks {
+        flex-direction: column;
         margin: 0 0 0.5rem 0;
         padding: 0;
     }
